bk_ida/gccida/g2/clear_dead_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/regrename.c:591:49: error: must use 'enum' tag to refer to type 'machine_mode'
void  clear_dead_regs( HARD_REG_ELT_TYPE *pset, machine_mode kind, rtx notes) 
                                                ^
                                                enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/regrename.c:618:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v5->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/regrename.c:625:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v11] - 5) <= 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/regrename.c:644:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)v5[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/regrename.c:687:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)v5[1]; 
           ^~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_dead_regs/src/obj/regrename.o] Error 1
